--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn-primary {
+    @apply border-4 border-transparent bg-blue-500 text-white font-bold rounded-full shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+};
+.btn-secondary {
+    @apply border-4 border-white text-white font-bold rounded-full hover:border-blue-500;
+}
